# rust-implementation

./: .editorconfig  .gitignore  .releaserc  .releaserc.json  .versionrc.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  README.md  deny.toml  flake.nix  package-lock.json  package.json
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: audit.yml  cargo-deny.yml  check-licenses.yml  check-sources.yml  ci.yml  cron-audit.yml  release.yml
ci/: prepare-cmd  resource-macos-sdk
nix/: default.nix  flake.nix
npm/: binary-install.js  get-binary.js  install.js  uninstall.js
src/: configuration_file.rs  dependencies.rs  error.rs  io.rs  lerna_manifest.rs  lib.rs  link.rs  lint.rs  lint_lerna_manifest.rs  main.rs  make_depend.rs  monorepo_manifest.rs  opts.rs  out_of_date_project_references.rs  package_manifest.rs  pin.rs  query.rs  typescript_config.rs  unpinned_dependencies.rs
templates/: makefile
test_data/external_dependency_multiple_versions/: lerna.json
test_data/incorrect_project_references_playground/: tsconfig.json
test_data/snapshots/: query_name.json  query_path.json
tests/: link.rs  lint.rs  pin.rs  query.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
