[package]
name = "typescript_tools"
version = "0.0.0-semantically-released"
edition = "2021"

[[bin]]
name = "monorepo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
askama = "0.11.1"
clap = { version = "4.0.8", features = ["cargo", "derive"] }
globwalk = "0.8.1"
indoc = "1.0.7"
pariter = "0.5.1"
pathdiff = "0.2.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }

[dev-dependencies]
semantic-release-rust = "1.0.0-alpha.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
