[package]
name = "typescript_tools"
version = "0.0.0-semantically-released"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "ISC"
description = "Tools for working with TypeScript monorepos"
readme = "README.md"
homepage = "https://github.com/typescript-tools/rust-implementation"
keywords = ["cli", "typescript", "monorepo"]
categories = ["command-line-utilities"]
exclude = [
  "/.dockerignore",
  "/.editorconfig",
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/.releaserc.json",
  "/.rustfmt.toml",
  "/.versionrc.json",
  "/Dockerfile",
  "/bin/monorepo",
  "/deny.toml",
  "/CHANGELOG.md",
  "/flake.{lock,nix}",
  "/npm",
  "/package*.json"
]

[[bin]]
name = "monorepo"
path = "src/main.rs"

[lib]
name = "typescript_tools"
path = "src/lib.rs"

[dependencies]
anyhow = "=1.0.70"
askama = "=0.12.0"
clap = { version = "=4.1.14", features = ["cargo", "derive"] }
globwalk = "=0.8.1"
indoc = "=2.0.1"
pariter = "=0.5.1"
pathdiff = "=0.2.1"
serde = { version = "=1.0.159", features = ["derive"] }
serde_json = { version = "=1.0.95", features = ["preserve_order"] }

[dev-dependencies]
semantic-release-rust = "1.0.0-alpha.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
